--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -8,6 +8,9 @@
   -webkit-border-radius: 25px;
   border-radius: 25px;
 }
+.dark-mode .meter {
+  background: rgba(255, 255, 255, 0.1);
+}
 .meter > span {
   display: block;
   height: 100%;
